--- a/src/app/info-prodructs/info-prodructs.component.html
+++ b/src/app/info-prodructs/info-prodructs.component.html
@@ -1,35 +1,16 @@
-<!-- <section class="comparar">
-    <h2>Productos mas vendidos</h2>
-    <div class="comparar-grid">
-        <div class="comparar-item">
-            <h3>Producto 1</h3>
-            <img src="https://picsum.photos/400/400?random=1" loading="lazy" alt="Producto 1">
-            <ul>
-                <li>Pantalla: 6.1 pulgadas</li>
-                <li>Procesador: A14 Bionic</li>
-                <li>Cámara: 12 MP</li>
-            </ul>
-            <a routerlink ="#" class="btn">Ver mas</a>
-        </div>
-        <div class="comparar-item">
-            <h3>Producto 2</h3>
-            <img src="https://picsum.photos/400/400?random=1" loading="lazy" alt="Producto 2">
-            <ul>
-                <li>Pantalla: 6.7 pulgadas</li>
-                <li>Procesador: A15 Bionic</li>
-                <li>Cámara: 12 MP</li>
-            </ul>
-            <a routerlink ="#" class="btn">Ver mas</a>
-        </div>
-        <div class="comparar-item">
-            <h3>Producto 3</h3>
-            <img src="https://picsum.photos/400/400?random=1" loading="lazy" alt="Producto 3">
-            <ul>
-                <li>Pantalla: 5.4 pulgadas</li>
-                <li>Procesador: A14 Bionic</li>
-                <li>Cámara: 12 MP</li>
-            </ul>
-            <a href="#" class="btn">Ver mas</a>
-        </div>
+<div class="watch-section">
+    <div class="section-item" style="background-image: url('https://fastly.picsum.photos/id/486/400/400.jpg?hmac=aU_3wQ366qFhoBoChWwCZ4yXBOGzm60o2fZXf5ccpC0');">
+      <p>Overview</p>
     </div>
-</section> -->
+    <div class="section-item" style="background-image: url('https://fastly.picsum.photos/id/486/400/400.jpg?hmac=aU_3wQ366qFhoBoChWwCZ4yXBOGzm60o2fZXf5ccpC0');">
+      <p>Design</p>
+    </div>
+    <div class="section-item" style="background-image: url('https://fastly.picsum.photos/id/486/400/400.jpg?hmac=aU_3wQ366qFhoBoChWwCZ4yXBOGzm60o2fZXf5ccpC0');">
+      <p>Features</p>
+    </div>
+    <div class="section-item" style="background-image: url('https://fastly.picsum.photos/id/486/400/400.jpg?hmac=aU_3wQ366qFhoBoChWwCZ4yXBOGzm60o2fZXf5ccpC0');">
+      <p>Technology</p>
+    </div>
+    
+  </div>
+  
