--- a/src/app/static/header/header.component.css
+++ b/src/app/static/header/header.component.css
@@ -9,12 +9,12 @@ body {
 }
 
 header {
-    width: 100%;
+    width: 100%; 
     background-color: #f8f8f8;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 0;
-    z-index: 999;
+    z-index: 900;
 }
 
 .navbar {
@@ -22,17 +22,18 @@ header {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
     padding: 10px 20px;
 }
 
 .logo img {
-    height: 24px;
+    height: 34px;
+    margin: 10px;
     width: auto;
 }
 
 nav ul {
-    list-style: none;
+    margin-top: 0px;
     display: flex;
     gap: 20px;
 }
@@ -58,26 +59,61 @@ nav ul li a:hover {
     display: none;
     font-size: 28px;
     cursor: pointer;
-    color: #333;
+    width: 100%;
+    text-align: right;
+    padding: 10px;
 }
 
 /* Media queries para pantallas pequeñas */
 @media (max-width: 768px) {
-    .navbar {
-        padding: 10px;
-    }
-    
-    nav ul {
+
+    #nav-links-norm{
+
         display: none;
-        flex-direction: column;
-        background-color: #f8f8f8;
-        position: absolute;
-        top: 60px;
-        right: 0;
-        width: 100%;
-        border-top: 1px solid #ccc;
+
+    }
+
+    .navbar {
+        padding: 10px; 
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
     }
     
+    .menu-icon{
+        display: block;
+    }
+
+    .nav-mobile{
+        display: visible;
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        z-index: 900;
+
+        padding-left: 10px;
+        background-color: #f8f8f8; 
+    }
+    
+    nav div{
+        width: 100%;
+        height: 50px;
+        padding: 20px;
+        text-align: center;
+    }
+
+    nav div img{
+        width: 18px;
+        height: 18px;        
+    }
+
+    nav ul{
+        flex-direction: column;
+        height: 80%;
+        width: 100%;
+        z-index: 999;
+    }
+
     nav ul li {
         text-align: center;
         padding: 10px 0;
@@ -88,7 +124,5 @@ nav ul li a:hover {
         display: flex;
     }
 
-    .menu-icon {
-        display: block;
-    }
+
 }
