Fixed- navbar defectuoso
se configuro el navbar para que no se solape encima de otros elementos al inicio

--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -1,17 +1,17 @@
 /* Estilos del banner */
 .header-banner {
-  position: relative;
-  width: 80%; /* Reducir ancho al 80% */
-  height: 50vh; /* Mantener altura ajustada */
+  width: 90%; /* Reducir ancho al 80% */
+  height: 80vh;
+  margin: 10px auto auto auto;
+
   background-size: cover;
   background-position: center;
-  border-radius: 15px; /* Bordes redondeados */
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5); /* Sombra similar */
-  transition: background-image 1s ease-in-out;
+  border-radius: 15px; 
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5); 
+
   display: flex;
-  justify-content: flex-start; /* Alineación a la izquierda */
+  justify-content: flex-start; 
   align-items: center;
-  margin: 20px auto; /* Centrado horizontalmente y margen superior para evitar que el header lo cubra */
   overflow: hidden;
 }
 
