--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,12 +1,11 @@
-<section
-  class="header-banner"
-  [ngStyle]="{ 'background-image': getBackgroundImage() }"
->
+<section class="header-banner" [ngStyle]="{ 'background-image': getBackgroundImage() }">
+  
   <div class="banner-content">
     <h1>{{ title }}</h1>
     <p>{{ subtitle }}</p>
     <a href="" class="banner-button">Ver Mas</a>
   </div>
+
   <button class="prev" (click)="prevSlide()">&#10094;</button>
   <button class="next" (click)="nextSlide()">&#10095;</button>
 </section>
