--- a/src/app/static/header/header.component.css
+++ b/src/app/static/header/header.component.css
@@ -12,7 +12,7 @@ header {
     width: 100%; 
     background-color: #f8f8f8;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 900;
 }
