--- a/src/app/static/header/header.component.css
+++ b/src/app/static/header/header.component.css
@@ -1,24 +1,18 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
 header {
-    width: 100%; 
+    width: 100vw;
     background-color: #f8f8f8;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
+
     z-index: 900;
 }
 
 .navbar {
-    max-width: 1024px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -27,7 +21,7 @@ header {
 }
 
 .logo img {
-    height: 34px;
+    height: 30px;
     margin: 10px;
     width: auto;
 }
@@ -77,11 +71,12 @@ nav ul li a:hover {
         padding: 10px; 
         display: flex;
         justify-content: space-around;
-        align-items: center;
+        align-content: center;
+        vertical-align: middle;
     }
     
     .menu-icon{
-        display: block;
+        display: inline;
     }
 
     .nav-mobile{
@@ -90,6 +85,7 @@ nav ul li a:hover {
         height: 100vh;
         width: 100vw;
         z-index: 900;
+        top:0;
 
         padding-left: 10px;
         background-color: #f8f8f8; 
@@ -125,4 +121,8 @@ nav ul li a:hover {
     }
 
 
+    /*
+        revisar bien las medidas en general, el codigo css debe tener la menor
+        cantidad de valores estaticos posible
+    */
 }
