--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -1,5 +1,6 @@
 <header>
     <div class="navbar">
+
         <div class="logo">
             <a href="#"><img alt="Dinastia Iphone"/></a>
         </div>
@@ -23,15 +24,15 @@
 
 <div *ngIf="isMenuOpen">
 
-    <nav>
+    <nav class="nav-mobile">
 
-        <div class="nav-mobile-icon">
+        <div class="nav-mobile-icon" (click)="openMenu()">
 
-            <img src="icons/cross.png" alt="cross">
+            <img src="icons/upload.png" alt="cross">
            
         </div>
 
-        <ul id="nav-mobile">
+        <ul id="nav-mobile-links">
             <li><a href="#" class="btn">Mac</a></li>
             <li><a href="#" class="btn">iPad</a></li>
             <li><a href="#" class="btn">iPhone</a></li>
