--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,5 @@
-body {
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  body.dark-mode {
-    background-color: #201f1f;
-    color: #f8f8f8;
-  }
-  
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
