--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: flex-start; 
   align-items: center;
-  /* overflow: hidden; */
+  overflow: hidden;
 
 }
 
@@ -108,11 +108,22 @@ div img{
 
 /* Pantallas pequeñas */
 @media (max-width: 768px) {
+
+  .banner-content-text-container{
+    width: 100%;
+    justify-content: flex-end;
+    margin-bottom: 10vh;
+  }
+
   .banner-content h1 {
     font-size: 5vw;
   }
 
   .banner-content p {
+    font-size: 3vw;
+  }
+
+  .banner-content a{
     font-size: 3vw;
   }
 
@@ -123,14 +134,19 @@ div img{
 
 @media (max-width: 480px) {
   .banner-content h1 {
-    font-size: 6vw;
+    font-size: 10vw;
   }
 
   .banner-content p {
-    font-size: 4vw;
+    font-size: 8vw;
+  }
+
+  .banner-content a{
+    font-size: 3vw;
   }
 
   .prev, .next {
     font-size: 16px;
   }
+  
 }
