--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,10 @@
 <app-info-pay></app-info-pay>
 <app-whatsapp></app-whatsapp>
 <app-theme-toggle></app-theme-toggle>
+
+<!-- <app-banner-products></app-banner-products>
+<app-all-products></app-all-products> -->
+
+<!-- <app-product-page></app-product-page>
+<app-product-gallery></app-product-gallery> -->
 <app-footer></app-footer>
