--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,10 +1,9 @@
 <section class="header-banner">
-
   <div class="img-carrousel">
-    <img [src]="imgs[index].url" [alt]="imgs[index].alt">
+    <img [src]="imgs.url" [alt]="imgs.alt">
   </div>
 
-  <div class="banner-content">
+  <!-- <div class="banner-content">
 
     <div class="banner-content-text-container">
       <h1>{{ "cosa" }}</h1>
@@ -12,7 +11,8 @@
       <a href="" class="banner-button">Ver Mas</a>
     </div>
 
-    <button class="prev" (click)="nextImg()" (click)="restartClock()">&#10094;</button>
-    <button class="next" (click)="prevImg()" (click)="restartClock()">&#10095;</button>
-  </div>
+    <button class="prev" (click)="restartClock()">&#10094;</button>
+    <button class="next" (click)="restartClock()">&#10095;</button>
+  
+  </div> -->
 </section>
