--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="navbar">
 
         <div class="logo">
-            <a href="#"><img alt="Dinastia Iphone"/></a>
+            <a href=""><img [src]="Icon.url" [alt]="Icon.name"/></a>
         </div>
 
         <div class="menu-icon" #menuIcon (click)="openMenu()">
