--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -1,20 +1,15 @@
 /* Estilos del banner */
 .header-banner {
 
-  width: 90vw; /* Reducir ancho al 80% */
+  width: 100%; 
   height: 80vh;
-  margin: 10px auto auto auto;
-
-  /* background-size: cover;
-  background-position: center;
-  border-radius: 15px; 
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);  */
-
+  
+  padding: 1% 2%;
+  
   display: flex;
   justify-content: flex-start; 
   align-items: center;
   overflow: hidden;
-
 }
 
 .img-carrousel{
