--- a/src/app/info-prodructs/info-prodructs.component.css
+++ b/src/app/info-prodructs/info-prodructs.component.css
@@ -1,45 +1,64 @@
+.own-products {
+  width: 90vw;
+  height: auto;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4vh;
+  text-align: center;
+}
+
+.own-products h2 {
+  font-size: 6vh;
+}
+
 .watch-section {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    margin: 0 auto;
-    padding: 20px;
-    max-width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 20px;
+  margin: 0 auto;
+  padding: 20px;
+  max-width: 1200px;
+}
+
+.section-item {
+  position: relative;
+  height: 450px;
+  /* Ajusta la altura según sea necesario */
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  /* Coloca el texto a la derecha */
+  color: white;
+  /* Cambia el color del texto según el fondo */
+  padding: 0 20px;
+  /* Espaciado a la derecha */
+  border-radius: 8px;
+  /* Esquinas redondeadas */
+  transition: transform 0.3s ease;
+}
+
+.section-item p {
+  font-weight: bold;
+  font-size: 20px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+  /* Sombra de texto para mejor legibilidad */
+}
+
+.section-item:hover {
+  transform: scale(1.05);
+}
+
+@media (max-width: 768px) {
+  .watch-section {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   }
-  
-  .section-item {
-    position: relative;
-    height: 150px; /* Ajusta la altura según sea necesario */
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end; /* Coloca el texto a la derecha */
-    color: white; /* Cambia el color del texto según el fondo */
-    padding: 0 20px; /* Espaciado a la derecha */
-    border-radius: 8px; /* Esquinas redondeadas */
-    transition: transform 0.3s ease;
+}
+
+@media (max-width: 480px) {
+  .watch-section {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
   }
-  
-  .section-item p {
-    font-weight: bold;
-    font-size: 20px;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Sombra de texto para mejor legibilidad */
-  }
-  
-  .section-item:hover {
-    transform: scale(1.05);
-  }
-  
-  @media (max-width: 768px) {
-    .watch-section {
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    }
-  }
-  
-  @media (max-width: 480px) {
-    .watch-section {
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    }
-  }
-  
+}
