--- a/src/app/static/footer/footer.component.css
+++ b/src/app/static/footer/footer.component.css
@@ -3,11 +3,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f5f5f5;
+    background-color: var(--light-fourty-color);
     padding: 20px 40px;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
-    color: #333;
+    color: #fff;
 }
 
 .footer-left {
