--- a/src/app/static/footer/footer.component.html
+++ b/src/app/static/footer/footer.component.html
@@ -6,13 +6,13 @@
     <div class="footer-right">
         <div class="social-buttons">
             <a href="https://www.facebook.com" class="social-icon" target="_blank">
-                <img src="icon-facebook.png" alt="Facebook">
+                <img [src]="Icons[2].url" alt="Facebook">
             </a>
             <a href="https://www.twitter.com" class="social-icon" target="_blank">
-                <img src="icon-twitter.png" alt="X">
+                <img [src]="Icons[1].url" alt="X">
             </a>
             <a href="https://www.instagram.com" class="social-icon" target="_blank">
-                <img src="icon-instagram.png" alt="Instagram">
+                <img [src]="Icons[3].url" alt="Instagram">
             </a>
         </div>
     </div>
