--- a/src/app/static/header/header.component.css
+++ b/src/app/static/header/header.component.css
@@ -1,14 +1,10 @@
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-}
-
 header {
-    width: 100vw;
-    background-color: #f8f8f8;
+    width: 100%;
+    background-color: var(--light-fourty-color);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
     position: sticky;
     top: 0;
-
     z-index: 999;
 }
 
@@ -38,8 +34,8 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #333;
-    font-size: 14px;
+    color: #fff;
+    font-size: 1rem;
     padding: 8px 12px;
     transition: color 0.3s ease;
 }
@@ -51,11 +47,14 @@ nav ul li a:hover {
 /* Ocultar el menú hamburguesa en pantallas grandes */
 .menu-icon {
     display: none;
-    font-size: 28px;
+    font-size: 1.8rem;
+
     cursor: pointer;
     width: 100%;
     text-align: right;
     padding: 10px;
+
+    color: #fff;
 }
 
 /* Media queries para pantallas pequeñas */
@@ -87,8 +86,8 @@ nav ul li a:hover {
         z-index: 999;
         top:0;
 
-        padding-left: 10px;
-        background-color: #f8f8f8; 
+        padding: 20px;
+        background-color: var(--light-fourty-color); 
     }
     
     nav div{
@@ -99,8 +98,10 @@ nav ul li a:hover {
     }
 
     nav div img{
-        width: 18px;
-        height: 18px;        
+        width: 1.5rem;
+        height: auto;        
+        filter:contrast(0) brightness(100);
+        cursor: pointer;
     }
 
     nav ul{
