--- a/src/app/whatsapp/whatsapp.component.html
+++ b/src/app/whatsapp/whatsapp.component.html
@@ -1,3 +1,3 @@
-<a href="https://wa.me/1234567890" class="whatsapp-button" target="_blank">
-    <img src="icon-whatsapp.png" alt="WhatsApp">
+<a href="https://wa.me/1234567890" [ngClass]="{'whatsapp-button':true, 'btn-stuck':isStuck}" [ngStyle]="{'margin-bottom':almendra+'px'}"target="_blank">
+    <img [src]="Icons.url" alt="WhatsApp">
 </a>
