--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -3,145 +3,189 @@
 
   width: 100%; 
   height: 80vh;
+  position: relative;
   
-  padding: 1% 2%;
+  padding: 5% 0;
+
+  background-color: var(--light-secondary-color);
   
   display: flex;
   justify-content: flex-start; 
   align-items: center;
-  overflow: hidden;
+
+  
 }
 
+/* styles banner img*/
 .img-carrousel{
-  width: 100%;
-  height: 100%;
-  z-index: 925;
+  width: 90vw;
+  height: 75vh;
+  margin: 2% auto;
+
 }
 
 div img{
   width: 100%;
   height: 100%;
-  object-fit:cover;
+  object-fit:fill;
 }
-   
-.banner-content {
-  color: #fff;
-  text-align: left;
+
+/*banner content*/
+.banner-container{
+  width: 90vw;
+  height: 75vh;
+
   position: absolute;
+  left: 50%;
+  transform: translate(-50%,0);
+  
+  /* border: 1px solid white; */
+  z-index: 998;
 
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+  gap: 1%;
 
-  width: 90vw;
-  height: 80vh;
-  z-index: 950;
-
+  overflow: hidden;
 }
 
-.banner-content-text-container{
-  width: 50%;
-  height: 100%;
+/*text banner*/
+.banner-container-textContainer{
+
+  width: 60%;
+  height: 80%;
+  /* border: 1px solid pink; */
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
-.banner-content-text-container h1 {
-  font-size: 8vw; /* Tamaño de fuente relativo al viewport */
-  font-weight: 700;
-  margin: 0;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); /* Sombra para el texto */
+.banner-container-textContainer {
+  text-align: center;
+  padding: 20px;
+  font-family: Arial, sans-serif;
 }
 
-.banner-content-text-container p {
-  font-size: 3vw;
-  margin-top: 10px;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+.banner-container-textContainer h1 {
+  font-size: 2.5em;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color:#fff;
 }
 
-.banner-content-text-container a {
-  font-size: 2vw;
-  background-color: #fff;
-  border-radius: 20px;
-  padding: 10px;
-  margin-top: 8px;
+.banner-container-textContainer p {
+  font-size: 1em;
+  color: #aaa;
+  margin-bottom: 20px;
 }
 
-/* Botones de navegación */
-.prev, .next {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  border: none;
-  color: white;
-  font-size: 24px;
-  padding: 10px;
+.buttons {
+  display: inline-flex;
+  gap: 10px;
+}
+
+.btn-light, .btn-dark {
+  padding: 10px 20px;
+  font-size: 14px;
+  border-radius: 5px;
   cursor: pointer;
-  z-index: 2;
-  border-radius: 50%; /* Forma circular */
-  display: none; /* Se ocultan inicialmente */
+  border: none;
 }
 
-.prev {
-  left: 20px;
+.btn-light {
+  background-color: #f1f1f1;
+  color: #333;
+  border: 1px solid #ccc;
 }
 
-.next {
-  right: 20px;
+.btn-dark {
+  background-color: #333;
+  color: white;
 }
 
-/* Muestra los botones al pasar el cursor por el banner */
-.header-banner:hover .prev,
-.header-banner:hover .next {
+/*carrousel styles*/
+.banner-container-carrouselContainer{
+
+  width: 40%;
+  height: 100%;
+  /* border: 1px solid red; */
+  position: relative;
+
+}
+
+.banner-container-carrouselContainer {
+  width: 250px;
+  height: auto; 
   display: block;
-}
+  margin: 0 auto;
+
+  /* border: 1px solid red; */
+} 
+
 
 /* Pantallas pequeñas */
-@media (max-width: 768px) {
+@media (max-width: 550px) {
 
-  .banner-content-text-container{
+  .header-banner{
+    height: 85vh;
+    /* border: 1px solid red; */
+  }
+
+  .img-carrousel{
+    width: 95vw;
+    height: 100%;
+  }
+
+  /*banner container*/
+  .banner-container{
+    
+    flex-direction: column-reverse;
+    /* border: 1px solid red; */
+    
+  }
+
+  .banner-container h1 {
+    font-size: 1.6em;
+  }
+
+  .banner-container p {
+    font-size: 1.2em;
+  }
+
+  .banner-container-textContainer{
     width: 100%;
-    justify-content: flex-end;
-    margin-bottom: 10vh;
+    height: 40%;
   }
 
-  .banner-content h1 {
-    font-size: 5vw;
+  .banner-container-carrouselContainer{
+    width: 200px;
+    height: auto;
   }
 
-  .banner-content p {
-    font-size: 3vw;
+  .phone{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
 
-  .banner-content a{
-    font-size: 3vw;
+  .phone img{
+    object-fit: cover;
   }
 
-  .prev, .next {
-    font-size: 18px;
+  .banner-container-carrouselContainer .shadow{
+    display: none;
   }
+
 }
 
 @media (max-width: 480px) {
-  .banner-content h1 {
-    font-size: 10vw;
-  }
 
-  .banner-content p {
-    font-size: 8vw;
+  .banner-container-carrouselContainer{
+    width: 60%;
+    height: auto;
   }
-
-  .banner-content a{
-    font-size: 3vw;
-  }
-
-  .prev, .next {
-    font-size: 16px;
-  }
-  
+ 
 }
