--- a/src/app/info-prodructs/info-prodructs.component.css
+++ b/src/app/info-prodructs/info-prodructs.component.css
@@ -1,10 +1,9 @@
 .own-products {
-  width: 90vw;
+  width: 100%;
   height: auto;
+  background-color: var(--light-thirty-color);
 
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 4vh;
+  padding-top: 4vh;
   text-align: center;
 }
 
