--- a/src/app/whatsapp/whatsapp.component.css
+++ b/src/app/whatsapp/whatsapp.component.css
@@ -1,11 +1,11 @@
 /* Estilo del botón flotante de WhatsApp */
 .whatsapp-button {
     position: fixed;
-    bottom: 30px;
-    right: 30px;
+    bottom: 25px;
+    right: 10px;
 
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: auto;
     z-index: 1000; /* Para asegurarse que esté sobre otros elementos */
     border-radius: 50%;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -14,11 +14,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
     transition: transform 0.3s ease;
 }
 
-.whatsapp-button img {
-    width: 45px;
+.whatsapp-button>img {
+    width: 100%;
     height: auto;
     filter:grayscale(1) contrast(100);
 }
@@ -33,15 +34,15 @@
 }
 
 /* Responsivo */
-@media (max-width: 768px) {
+@media (max-width: 550px) {
     .whatsapp-button {
         width: 40px;
         height: 40px;
     }
 
-    .whatsapp-button img {
-        width: 30px;
-        height: 30px;
+    .whatsapp-button>img {
+        width: 100%;
+        height: 100%;
     }
     
 }
