--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 <app-header></app-header>
 <app-banner></app-banner>
-<app-info-prodructs></app-info-prodructs>
+<!-- <app-info-prodructs></app-info-prodructs> -->
 <app-history-page></app-history-page>
 <app-info-pay></app-info-pay>
 <app-whatsapp></app-whatsapp>
@@ -12,4 +12,5 @@
 
 <!-- <app-product-page></app-product-page>
 <app-product-gallery></app-product-gallery> -->
+<!-- <app-faq></app-faq> -->
 <app-footer></app-footer>
