--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -15,7 +15,9 @@
                 <li><a href="#" class="btn">iPad</a></li>
                 <li><a href="#" class="btn">iPhone</a></li>
                 <li><a href="#" class="btn">Watch</a></li>
-                <li><a href="#" class="btn">Comparar</a></li>
+                <li><a 
+                   
+                    href="comparador" class="btn">Comparar</a></li>
             </ul>
         </nav>
     </div>
