--- a/src/app/phoneComparator-page/comparator-component/comparator-component.component.css
+++ b/src/app/phoneComparator-page/comparator-component/comparator-component.component.css
@@ -1,13 +1,28 @@
-h1{
+.titleBox{
     width: 100%;
-    height: 100%;
-    font-size: 3em;
-    text-align: center;
-
-    /* border: 1px solid red; */
-    padding-top: .2em;
+    height: 100px;
 }
 
+h1{
+    text-align: center;
+    font-size: 3em;
+    padding-top:.2em;
+}
+
+p{
+    font-size: 2em;
+    text-align: center;
+}
+
+/*
+
+    Selectors boxes
+
+*/
+.modelSelectors{
+    width: 100%;
+    height: 15vh;
+}
 
 /*
     Phones container box
