--- a/src/app/phoneComparator-page/comparator-component/comparator-component.component.html
+++ b/src/app/phoneComparator-page/comparator-component/comparator-component.component.html
@@ -1,19 +1,25 @@
 <app-header></app-header>
 <section>
 
-    <h1>comparador de modelos</h1>
+    <div class="titleBox">
+        <h1>Comparador de modelos</h1>
+        <p>compara entre nuestros modelos de iphone</p>
+    </div>
+
     <div class="modelSelectors">
 
-        <select name="iphoneOne" [(ngModel)]="userModelOne" (change)="test(0)">
+        <select name="iphoneOne" [(ngModel)]="userModelOne" (change)="test(0)" class="selectorBox">
             <optgroup label="Nuevos modelos">
                 <ng-container *ngTemplateOutlet="opts"></ng-container>
             </optgroup>
+
         </select>
-        
-        <select name="iphoneTwo" [(ngModel)]="userModelTwo" (change)="test(1)">
+
+        <select name="iphoneTwo" [(ngModel)]="userModelTwo" (change)="test(1)" class="selectorBox">
             <optgroup label="Nuevos modelos">
                 <ng-container *ngTemplateOutlet="opts"></ng-container>
             </optgroup>
+
         </select>
 
     </div>
@@ -28,7 +34,7 @@
 
 </section>
 <!-- <app-phone-details></app-phone-details> -->
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
 
 <!-- zona de templates -->
 
