--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,11 @@
 <app-history-page></app-history-page>
 <app-info-pay></app-info-pay>
 <app-whatsapp></app-whatsapp>
-<app-theme-toggle></app-theme-toggle>
+<!-- <app-theme-toggle></app-theme-toggle> -->
+
+<app-faq></app-faq>
+<!-- <app-product-container></app-product-container> -->
+
 <!-- <app-banner-products></app-banner-products> -->
 <!-- <app-all-products></app-all-products>  -->
 <!-- <app-product-page></app-product-page> -->
