--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,14 +1,40 @@
-<section>
+<section class="faq-section">
+    <h2>Respondemos tus dudas</h2>
     <details>
-        <summary>>¿Esto es nuevo?</summary>
-        <p>Si, el atributo name es nuevo. Al usarlo puedes sincronizar todos los que estan abiertos</p>
+      <summary> ¿Qué te ofrecemos en Dinastia Iphone?</summary>
+      <p>Te ofrecemos el mejor servicio adaptado a tus necesidades.</p>
     </details>
     <details>
-        <summary>¿Y como se hacia antes?</summary>
-        <p>Necesitabas JS</p>
+      <summary> ¿Cosas importantes sobre nosotros?</summary>
+      <p>Tener presencia en internet es esencial para cualquier negocio en la actualidad.</p>
     </details>
     <details>
-        <summary>¿Y el soporte?</summary>
-        <p>Que te importa..</p>
+      <summary> ¿Por qué es importante un diseño atractivo en una página web?</summary>
+      <p>Un diseño atractivo mejora la experiencia del usuario y genera mayor confianza.</p>
     </details>
-</section>
+    <details>
+      <summary> ¿Qué debo mirar a la hora de contratar un servicio de diseño para mi web?</summary>
+      <p>Debes observar la experiencia del equipo, el portafolio de trabajos previos y las recomendaciones de otros clientes.</p>
+    </details>
+    <details>
+      <summary> ¿Quién contrata el hosting y dominio?</summary>
+      <p>El cliente contrata el hosting y dominio, aunque ofrecemos asistencia si lo necesitas.</p>
+    </details>
+    <details>
+      <summary> ¿Hay que pagar mensualidades?</summary>
+      <p>No, pagas una vez por el diseño web, pero los servicios de hosting y dominio suelen tener pagos anuales o mensuales.</p>
+    </details>
+    <!-- <details>
+      <su ¿Qué pasa si no me gusta la web?</summary>
+      <p>Nos aseguramos de trabajar contigo en cada etapa del proceso para que quedes completamente satisfecho.</p>
+    </details>
+    <details>
+   ¿Cómo es el proceso de contratación?</summary>
+      <p>Contáctanos para obtener una cotización, definimos los detalles y tiempos de entrega, y comenzamos el proyecto.</p>
+    </details>
+    <details>
+      <summary>📐 ¿Cómo es el proceso de creación de la web?</summary>
+      <p>Te guiamos en la creación de contenido, estructura, diseño y pruebas antes del lanzamiento final.</p>
+    </details> -->
+  </section>
+  
