--- a/src/app/sec-products/product-data/product-data.component.html
+++ b/src/app/sec-products/product-data/product-data.component.html
@@ -1,1 +1,9 @@
-<p>product-data works!</p>
+
+
+<div class="product-card">
+    <img src="https://picsum.photos/400/400?random=1" loading="lazy" alt="Imagen del producto" />
+    <h3>{{ phoneInput().model }}</h3>
+    <p>{{ phoneInput().camera }}</p>
+    <p class="price">{{ phoneInput().price }}</p>
+    <button>Comprar</button>
+  </div>
