--- a/src/app/history-page/history-page.component.css
+++ b/src/app/history-page/history-page.component.css
@@ -1,6 +1,6 @@
 /* Estilo general de la sección de historia */
 .company-history {
-    background-color: #f8f8f8; /* Fondo claro, limpio y moderno */
+    background-color: #001233; /* Fondo claro, limpio y moderno */
     padding: 50px 20px;
     text-align: center;
     font-family: 'Helvetica Neue', Arial, sans-serif;
@@ -15,15 +15,16 @@
 .company-history h2 {
     font-size: 2.5rem;
     font-weight: 600;
-    color: #000;
+    color: #fdfcfc;
     margin-bottom: 20px;
 }
 
 .company-history p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     line-height: 1.6;
     margin-bottom: 20px;
-    color: #555;
+    color: #fdfcfc;
+
 }
 
 /* Responsivo */
