--- a/src/app/info-pay/info-pay.component.css
+++ b/src/app/info-pay/info-pay.component.css
@@ -2,7 +2,7 @@
 .info-seccion {
     text-align: center;
     padding: 40px 20px;
-    background-color: #f5f5f5;
+    background-color: #f8f9fa;
 }
 
 .info-seccion h2 {
@@ -24,12 +24,12 @@
 .info-item {
     flex: 1;
     padding: 20px;
-    background-color: #fff;
+    /* background-color: #fff; */
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     text-align: center;
-    box-sizing: border-box;
-    margin: 10px;
+    /* box-sizing: border-box; */
+    margin: 5px;
 }
 
 .info-item h3 {
