--- a/src/app/sec-products/product-container/product-container.component.html
+++ b/src/app/sec-products/product-container/product-container.component.html
@@ -1,1 +1,33 @@
-<p>product-container works!</p>
+ <!-- Títulos de familia -->
+ <div class="families">
+    <span (click)="filterProducts('razr')">IPHONE 14</span>
+    <span (click)="filterProducts('edge')">IPHONE 15</span>
+  </div>
+
+    <ul>
+        <li *ngFor="let product of filteredProducts">
+          {{ product.model }} - {{ product.camera }} - ${{ product.price }}
+        </li>
+    </ul>
+
+  <div class="normal-view" *ngIf="!isMobileView && family.length <= 3">
+
+    <app-product-data *ngFor="let product of family" [phoneInput]="product" ></app-product-data>
+
+
+  </div>
+
+
+  <!-- Modo carrusel -->
+  <div class="carousel" *ngIf="isMobileView || family.length > 3">
+    <!-- <button class="prev" (click)="prevSlide()">&#10094;</button> -->
+    <div class="carousel-track" [style.transform]="'translateX(-' + currentSlide * 100 + '%)'">
+      <div class="carousel-item" *ngFor="let product of family">
+
+
+      </div>
+    </div>
+    
+    <button class="next" (click)="nextSlide()">&#10095;</button>
+    <button class="prev" (click)="prevSlide()">&#10096;</button>
+  </div>
