--- a/src/app/theme-toggle/theme-toggle.component.css
+++ b/src/app/theme-toggle/theme-toggle.component.css
@@ -1,5 +1,5 @@
 /* Botón flotante para cambiar el tema */
-.theme-toggle {
+/* .theme-toggle {
     position: fixed;
     bottom: 20px;
     left: 20px;
@@ -27,4 +27,4 @@
     background-color: #211f1f;
     color: #f8f8f8;
   }
-  
+   */
