fixed- phone section
se configuro y se dejo funcionando la parte de telefonos

--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -14,7 +14,7 @@
                 <li><a href="#" class="btn">Mac</a></li>
                 <li><a href="#" class="btn">iPad</a></li>
                 <li><a href="#" class="btn">iPhone</a></li>
-                <li><a href="#" class="btn">Watch</a></li>
+                <li><a href="testZone" class="btn">testZone</a></li>
                 <li><a 
                    
                     href="comparador" class="btn">Comparar</a></li>
