--- a/src/app/falsoHome/home.component.html
+++ b/src/app/falsoHome/home.component.html
@@ -1,12 +1,13 @@
-<!-- <app-header></app-header>
+<app-header></app-header>
 <app-banner></app-banner>
-<app-info-prodructs></app-info-prodructs>
+<app-product-container></app-product-container>
+<!-- <app-info-prodructs></app-info-prodructs> -->
 <app-history-page></app-history-page>
 <app-info-pay></app-info-pay>
 <app-whatsapp></app-whatsapp>
 <app-theme-toggle></app-theme-toggle>
-<app-banner-products></app-banner-products>
-<app-all-products></app-all-products> 
-<app-product-page></app-product-page>
-<app-product-gallery></app-product-gallery> -->
-<!-- <app-footer></app-footer> -->
+<!-- <app-banner-products></app-banner-products> -->
+<!-- <app-all-products></app-all-products>  -->
+<!-- <app-product-page></app-product-page> -->
+<!-- <app-product-gallery></app-product-gallery>  -->
+<app-footer></app-footer>
