--- a/src/app/sec-products/product-data/product-data.component.html
+++ b/src/app/sec-products/product-data/product-data.component.html
@@ -1,1 +1,7 @@
-<p>product-data works!</p>
+<div class="product-card">
+    <!-- <img [src]="phoneDetais()" alt="Imagen del producto" /> -->
+    <h3>{{ phoneDetails().model }}</h3>
+    <p>{{ phoneDetails().display }}</p>
+    <p class="price">{{ phoneDetails().price }}</p>
+    <button>Comprar</button>
+</div>
