--- a/src/app/sec-products/product-data/product-data.component.css
+++ b/src/app/sec-products/product-data/product-data.component.css
@@ -1,10 +1,17 @@
 
 .product-card {
     background: #f7f7f7;
+    width: 400px;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 100%;
+
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     text-align: center;
 }
 
@@ -29,13 +36,14 @@ button {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
-    .normal-view {
-        display: none;
+
+@media (max-width: 600px) {
+
+    .product-card{
+        width:90vw;
     }
 
-    .carousel-item {
-        min-width: 100%;
-    }
+
+  
 }
-=======
+  
