--- a/src/app/phoneComparator-page/comparator-component/comparator-component.component.css
+++ b/src/app/phoneComparator-page/comparator-component/comparator-component.component.css
@@ -3,6 +3,7 @@ section {
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
+
 }
 
 .titleBox {
@@ -29,7 +30,7 @@ section {
 .selectorBox {
   width: 250px;
   padding: 20px;
-  margin: 0 350px;
+  margin: 0 120px;
   font-size: 1rem;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -54,7 +55,7 @@ section {
 
 @media (max-width: 768px) {
   .titleBox h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 
   .titleBox p {
@@ -73,12 +74,13 @@ section {
   }
 
   .phonesContainer {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+
   }
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .titleBox h1 {
     font-size: 1.5rem;
   }
@@ -89,14 +91,16 @@ section {
 
   .selectorBox {
     width: 100%;
-    max-width: 280px;
+    max-width: 180px;
     font-size: 0.9rem;
   }
 
+
   .phonesContainer {
     gap: 10px;
-  }
-}
+    /* flex-direction: row; */
+  
+
 
 
 
