--- a/src/app/phoneComparator-page/comparator-component/comparator-component.component.html
+++ b/src/app/phoneComparator-page/comparator-component/comparator-component.component.html
@@ -22,6 +22,13 @@
 
         </select>
 
+        <select name="iphoneThree" [(ngModel)]="userModelThree" (change)="test(2)" class="selectorBox">
+            <optgroup label="Nuevos modelos">
+                <ng-container *ngTemplateOutlet="opts"></ng-container>
+            </optgroup>
+
+        </select>
+
     </div>
 
     <div class="phonesContainer">
@@ -29,6 +36,8 @@
         <app-phone-details [phoneInput]="phoneModalOne"></app-phone-details>
 
         <app-phone-details [phoneInput]="phoneModalTwo"></app-phone-details>
+
+        <app-phone-details [phoneInput]="phoneModalThree"></app-phone-details>
 
     </div>
 
