--- a/src/app/phoneComparator-page/templates/phone-details/phone-details.component.css
+++ b/src/app/phoneComparator-page/templates/phone-details/phone-details.component.css
@@ -4,6 +4,7 @@
     margin: 0 auto;
     padding: 0 20px;
     /* border: 1px solid #ccc; */
+    
 }
 
 
@@ -22,10 +23,10 @@ h1 {
 
 .feature {
     background-color: #fff;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding: 1.5rem;
     margin-bottom: 2rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
     text-align: center;
 }
 
@@ -36,21 +37,22 @@ h1 {
 }
 
 h2 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     margin-bottom: 0.5rem;
 }
 
 
 
-/* @media (max-width: 768px) {
-    .features {
+@media (max-width: 768px) {
+    /* .features {
         flex-direction: column;
     }
 
     .feature {
         flex-basis: 100%;
-    }
-} */
+    } */
+
+}
 
 
 
