--- a/src/app/falsoHome/home.component.html
+++ b/src/app/falsoHome/home.component.html
@@ -7,9 +7,10 @@
 <app-whatsapp></app-whatsapp>
 <app-theme-toggle></app-theme-toggle>
 <app-faq></app-faq>
-<!-- <app-banner-products></app-banner-products>
-<app-all-products></app-all-products> 
-<app-product-page></app-product-page>
-<app-product-gallery></app-product-gallery>  -->
+
+<!-- <app-banner-products></app-banner-products> -->
+<!-- <app-all-products></app-all-products>  -->
+<!-- <app-product-page></app-product-page> -->
+<!-- <app-product-gallery></app-product-gallery>   -->
 
 <app-footer></app-footer>
