--- a/src/app/product/product-page/product-page.component.html
+++ b/src/app/product/product-page/product-page.component.html
@@ -1,5 +1,5 @@
 <div class="product-page">
-  <app-product-gallery [product]="product"></app-product-gallery>
+  <app-product-gallery></app-product-gallery>
 </div>
 
 
