--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -13,7 +13,7 @@
             <ul id="nav-links-norm">
                 <li><a href="#" class="btn">Mac</a></li>
                 <li><a href="#" class="btn">iPad</a></li>
-                <li><a href="#" class="btn">iPhone</a></li>
+                <li><a href="product" class="btn">iPhone</a></li>
                 <li><a href="testZone" class="btn">testZone</a></li>
                 <li><a 
                    
